<resources>
    <string name="app_name">RSS</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="dialog_add_feed_title">Choose a multifeed</string>
    <string name="dialog_add_feed_positive_button">Create New</string>
    <string name="cancel">Cancel</string>
    <string name="feed_add_error">An error occurred while adding the feed</string>
    <string name="swipe_to_save">Saved to Read it Later</string>
    <string name="unswipe_to_remove">Removed from Read it Later</string>
    <string name="categories">Categories</string>
    <string name="search_feed">Search feed</string>
    <string name="multifeed">Multifeed</string>
    <string name="multifeeds">Multifeeds</string>
    <string name="collection">Collection</string>
    <string name="collections">Collections</string>
    <string name="language_en">English</string>
    <string name="language_it">Italian</string>
    <string name="name">Name</string>
    <string name="importance">Importance</string>
    <string name="color">Color</string>
    <string name="choose">Choose</string>
    <string name="dialog_remove_feed_title">Remove this feed?</string>
    <string name="dialog_remove_multifeed_title">Remove this multifeed?</string>
    <string name="remove">Remove</string>
    <string name="feeds">Feeds</string>
    <string name="feedback_question">How do you rate this content?</string>
    <string name="feedback_good">Good</string>
    <string name="feedback_average">Average</string>
    <string name="feedback_bad">Bad</string>
    <string name="thank_you_feedback_submit">Thank you for the feedback</string>
    <string name="title_activity_collection_manager">CollectionManagerActivity</string>
    <string name="dialog_remove_collection_title">Remove this collection?</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating...</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="register">Register</string>
    <string name="already_member">Already a member? Login</string>
    <string name="creating_account">Creating account...</string>
    <string name="login_failed">Login failed, check your credentials</string>
    <string name="email_not_valid">Enter a valid email address</string>
    <string name="password_not_valid">Between 4 and 10 alphanumeric characters</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="name_not_valid">At least 3 characters</string>
    <string name="dialog_add_article_to_collection">Add article to collection</string>
    <string name="article_added_to_collection">Article added to collection</string>
    <string name="error_adding_article">Error adding the article to the collection</string>
    <string name="dialog_add_article_positive_button">Create new collection</string>
    <string name="collection_name">Collection name</string>
    <string name="registration_completed_login">Registration completed, login now with your credentials</string>
    <string name="multifeed_title">Multifeeds</string>
    <string name="collections_title">Collections</string>
    <string name="new_multifeed">New Multifeed</string>
    <string name="multifeed_name">Multifeed Name</string>
    <string name="multifeed_saved">Multifeed saved successfully</string>
    <string name="multifeed_not_saved">Error with the creation of the multifeed</string>
    <string name="feed">Feed</string>
    <string name="saved_in">saved in</string>
    <string name="error_adding_feed">Error adding feed</string>

</resources>
