<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLabelColor"
            style="@style/material_type_scale_overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <View
            android:id="@+id/viewCollectionEditColor"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLabelName"
            style="@style/material_type_scale_overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextCollectionEditTitle"
            style="@style/material_type_scale_h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/collection_name"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:text="Collection Name" />
    </LinearLayout>
</LinearLayout>
