<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="false"
    android:padding="64dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_foreground" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_input_shape"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="16dp"
            android:textColorHint="#000000"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_input_shape"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="16dp"
            android:textColorHint="#000000"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/signUpMailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_input_shape"
            android:padding="16dp"
            android:textColorHint="#000000"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rectangular_border"
            android:padding="12dp"
            android:text="@string/register" />

        <TextView
            android:id="@+id/loginTextView"
            style="@style/material_type_scale_h6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/already_member"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>