<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLabelColor"
                    style="@style/material_type_scale_overline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <View
                    android:id="@+id/viewMultifeedEditColor"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLabelName"
                    style="@style/material_type_scale_overline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextMultifeedName"
                    style="@style/material_type_scale_h6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/multifeed_name" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textViewLabelImportance"
                style="@style/material_type_scale_overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/imageViewFavLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

                <SeekBar
                    android:id="@+id/seekBarMultifeedEdit"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:max="4"
                    android:progress="1" />

                <ImageView
                    android:id="@+id/imageViewFavRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_favorite_black_24dp" />


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/feedListMultifeedEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textViewLabelFeedsList"
            style="@style/material_type_scale_overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feeds" />

        <ListView
            android:id="@+id/listViewEditMultifeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
